--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
 .main {
-    min-height: 100%;
     width: 100%;
+    height: 100%;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 60px 1fr 150px;
@@ -8,34 +8,18 @@
         "header"
         "content"
         "footer";
+    
     &__header {
-        grid-area: header;
+        grid-area: header;     
+        
     }
-    &_content {
+    &__content {
         grid-area: content;
+        margin: auto 0;   
         
     }
     &__foter {
-        grid-area: footer;        
-    }
-}
-@media (max-width: 1700px) {
-    .main__content {
-        padding-bottom: 120px;
-    }
-}
-@media (max-width: 1250px) {
-    .main__content {
-        padding-bottom: 140px;
-    }
-}
-@media (max-width: 970px) {
-    .main__content {
-        padding-bottom: 120px;
-    }
-}
-@media (max-width: 650px) {
-    .main__content {
-        padding-bottom: 250px;
+        grid-area: footer;   
+     
     }
 }
