--- a/src/app/pokemons/pokemons.component.scss
+++ b/src/app/pokemons/pokemons.component.scss
@@ -1,36 +1,34 @@
-.container {
+.container {    
     width: 100%;
-    // height: 100%;
-    padding-top: 2%;
-    // padding-bottom: 6%;
     display: grid;
+    grid-template-columns: 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;   
-    grid-row-gap: 8%;         
+    
     &__item {
-        margin: auto;
+        margin: 0 auto;
     }
 }
 @media (max-width: 1700px) {
     .container {
         grid-template-columns: 1fr 1fr 1fr 1fr; 
-        grid-row-gap: 6%; 
+        
     }
 }
 @media (max-width: 1250px) {
     .container {
         grid-template-columns: 1fr 1fr 1fr; 
-        grid-row-gap: 4%; 
+        
     }
 }
 @media (max-width: 970px) {
     .container {
         grid-template-columns: 1fr 1fr; 
-        grid-row-gap: 2%; 
+        
     }
 }
 @media (max-width: 650px) {
     .container {
         grid-template-columns: 1fr; 
-        grid-row-gap: 1%; 
+        
     }
 }
