--- a/src/app/pokemons/pokemons.component.scss
+++ b/src/app/pokemons/pokemons.component.scss
@@ -5,30 +5,39 @@
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;   
     
     &__item {
-        margin: 0 auto;
+        margin: auto;
+        padding: 10%;
     }
 }
 @media (max-width: 1700px) {
     .container {
-        grid-template-columns: 1fr 1fr 1fr 1fr; 
-        
-    }
+        grid-template-columns: 1fr 1fr 1fr 1fr;    
+        &__item {
+            padding: 8%;
+        }     
+    }    
 }
 @media (max-width: 1250px) {
     .container {
         grid-template-columns: 1fr 1fr 1fr; 
-        
+        &__item {
+            padding: 6%;
+        }
     }
 }
 @media (max-width: 970px) {
     .container {
         grid-template-columns: 1fr 1fr; 
-        
+        &__item {
+            padding: 4%;
+        }
     }
 }
 @media (max-width: 650px) {
     .container {
         grid-template-columns: 1fr; 
-        
+        &__item {
+            padding: 2%;
+        }
     }
 }
