обавил ввод типов для покемона

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,8 +15,7 @@
     }
     &__content {
         grid-area: content;
-        margin: auto 0;   
-        
+        // margin: auto 0; 
     }
     &__foter {
         grid-area: footer;   
