--- a/src/app/new-pokemon/new-pokemon.component.html
+++ b/src/app/new-pokemon/new-pokemon.component.html
@@ -35,3 +35,6 @@
     <div class="description__name">Описание</div>
     <textarea class="description__input" cols="30" rows="10" #idDescription (change)="setDescription(idDescription)"></textarea>
 </div>
+<div class="parameters">
+    <app-parameters [inParam]="param" (outParam)="setParameters($event)"></app-parameters>
+</div>
