--- a/src/app/new-pokemon/new-pokemon.component.scss
+++ b/src/app/new-pokemon/new-pokemon.component.scss
@@ -1,3 +1,4 @@
+$color-name: brown;
 .pokemon {    
     min-width: 150px;
     height: 260px;  
@@ -184,12 +185,12 @@
 }
 .description {
     float: left;
-    width: 25%;
-    height: 180px;
+    width: 30%;
+    height: 180px;    
     &__name {
         width: 100%;
         height: 30px;
-        background-color: brown;        
+        background-color: $color-name;        
         text-align: center;
         line-height: 30px;
         font-size: 1.3rem; 
@@ -204,4 +205,7 @@
         font-size: 1.3rem;      
         resize: none;        
     }
+}
+.parameters {
+    float: left;
 }
