--- a/src/app/new-pokemon/new-pokemon.component.scss
+++ b/src/app/new-pokemon/new-pokemon.component.scss
@@ -1,6 +1,14 @@
 $color-name: brown;
+
+.container {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
 .pokemon {    
-    min-width: 150px;
+    width: 200px;
     height: 260px;  
     padding-top: 110px;    
     padding-left: 15px;  
@@ -30,13 +38,14 @@ $color-name: brown;
     &__info {
         position: relative;
         top: -100px;
-        left: -8px;
+        left: -10px;
         background-color: white;
         color: black;
-        min-width: 182px;
+        min-width: 200px;
         height: 35px;
         border-radius: 50px;
         border: 1px solid black;
+        z-index: 1;
     }    
     &__types {
         float: left;
@@ -79,9 +88,7 @@ $color-name: brown;
         margin-top: 2px;          
     }   
     &__types-select {
-        width: 400px;
-        // height: 200px;
-        // background-color: white;
+        width: 400px;        
         position: relative;
         top: 30px;    
         left: 10px; 
@@ -147,8 +154,7 @@ $color-name: brown;
 .rarity {
     width: 25px;
     height: 210px; 
-    float: left;    
-    // margin-left: 220px;
+    float: left;
     &__item {
         width: 100%;
         height: 42px;
@@ -166,14 +172,8 @@ $color-name: brown;
             width: 120px;
             font-size: 1.2rem;
             transition: width .2s ease-in-out;
-        }             
-        // &:first-child {
-        //     border-top-left-radius: 25px;
-        //     border-top-right-radius: 25px;          
-        // }
-        &:last-child {
-            // border-bottom-left-radius: 25px;
-            // border-bottom-right-radius: 25px;   
+        }  
+        &:last-child {               
             border: none;       
         }
         &_usual {background-color: white;}
@@ -184,8 +184,8 @@ $color-name: brown;
     }
 }
 .description {
-    float: left;
-    width: 30%;
+    float: left;    
+    min-width: 250px;
     height: 180px;    
     &__name {
         width: 100%;
