added Weakesses component

--- a/src/app/new-pokemon/new-pokemon.component.html
+++ b/src/app/new-pokemon/new-pokemon.component.html
@@ -45,4 +45,7 @@
     <div class="abilities">
         <app-input-list [inList]="pokemon.abilities" (outList)="setAbilities($event)">Способности</app-input-list>
     </div>
+    <div class="weaknesses">
+        <app-weaknesses-pokemon (outweaknesses)="setWeakesses($event)"></app-weaknesses-pokemon>
+    </div>
 </div>
