--- a/src/app/new-pokemon/new-pokemon.component.scss
+++ b/src/app/new-pokemon/new-pokemon.component.scss
@@ -1,187 +1,8 @@
-$color-name: brown;
-
 .container {
     width: 100%;
     height: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-}
-
-.pokemon {    
-    width: 200px;
-    height: 260px;  
-    padding-top: 110px;    
-    padding-left: 15px;  
-    float: left;       
-    &__area {
-        position: absolute;
-        height: 170px; 
-        width: 180px;  
-        transform: perspective(60em) rotateX(-110deg); 
-        box-shadow: 0px 15px 65px 0px rgba(255, 255, 255, 0.7);
-        background-color: #2E2E2E;  
-        border: 1px solid black;    
-        border-radius: 25px; 
-        z-index: -2; 
-        &_rare {box-shadow: 0px 15px 65px 0px lightblue;}
-        &_veryRare {box-shadow: 0px 15px 65px 0px dodgerblue;}
-        &_epic {box-shadow: 0px 15px 65px 0px mediumpurple;}
-        &_legendary {box-shadow: 0px 15px 65px 0px orangered;}
-    }
-    &__div-img {
-        height: 200px;
-        width: 200px;
-        position: relative;
-        top: -110px;
-        left: -10px;             
-    }    
-    &__info {
-        position: relative;
-        top: -100px;
-        left: -10px;
-        background-color: white;
-        color: black;
-        min-width: 200px;
-        height: 35px;
-        border-radius: 50px;
-        border: 1px solid black;
-        z-index: 1;
-    }    
-    &__types {
-        float: left;
-        width: 25px;
-        height: 25px;
-        border-radius: 25px;
-        background-color: white;
-        margin: 4px 1px 4px 5px;
-        border: 1px solid black;
-        cursor: pointer;
-        &_Electric {background-color: yellow;}  
-        &_Fire {background-color: red;}  
-        &_Water {background-color: blue;}
-        &_None {background-color: white;}
-        &_Psychic {background-color: hotpink;}
-        &_Ground {background-color: lightseagreen;}
-        &_Normal {background-color: navajowhite;}
-        &_Flying {background-color: royalblue;}
-        &_Bug {background-color: sienna;}
-        &_Fighting {background-color: orangered;}
-        &_Grass {background-color: lightgreen;}
-        &_Fairy {background-color: violet;}
-        &_Ice {background-color: lightblue;}
-        &_Poison {background-color: mediumvioletred;}
-        &_Rock {background-color: grey;}
-        &_Steel {background-color: lightslategrey;}
-        &_Dragon {background-color: gold;}
-        &_Ghost {background-color: purple;}   
-    }
-    &__name {
-        float: right;
-        line-height: 30px;  
-        width: 100px; 
-        margin-right: 12px;   
-        border: none;
-        outline: none; 
-        text-align: center;     
-        font-size: 1.2rem; 
-        background-color: none; 
-        margin-top: 2px;          
-    }   
-    &__types-select {
-        width: 400px;        
-        position: relative;
-        top: 30px;    
-        left: 10px; 
-        z-index: 999;   
-    } 
-    &__type {
-        float: left;
-        width: 50%;
-        height: 35px;
-        background-color: white;        
-        border-bottom: 1px solid black;
-        &:nth-child(2n) {
-            border-bottom-right-radius: 25px;
-            border-top-right-radius: 25px;
-            border-left: 1px solid black;            
-        }      
-        &:nth-child(2n) .pokemon__type-icon {
-            float: right;
-        }
-        &:nth-child(2n+1) {
-            border-bottom-left-radius: 25px;
-            border-top-left-radius: 25px;
-        }
-        &:nth-child(2n+1) .pokemon__type-icon {
-            float: left;
-        }
-        &:hover {
-            background-color: lightgray;
-            color: white;
-        }
-    }
-    &__type-icon {        
-        width: 35px;
-        height: 35px;
-        border-radius: 35px;
-        background-color: white;
-        border: 1px solid black; 
-        &_Electric {background-color: yellow;}  
-        &_Fire {background-color: red;}  
-        &_Water {background-color: blue;}
-        &_None {background-color: white;}
-        &_Psychic {background-color: hotpink;}
-        &_Ground {background-color: lightseagreen;}
-        &_Normal {background-color: navajowhite;}
-        &_Flying {background-color: royalblue;}
-        &_Bug {background-color: sienna;}
-        &_Fighting {background-color: orangered;}
-        &_Grass {background-color: lightgreen;}
-        &_Fairy {background-color: violet;}
-        &_Ice {background-color: lightblue;}
-        &_Poison {background-color: mediumvioletred;}
-        &_Rock {background-color: grey;}
-        &_Steel {background-color: lightslategrey;}
-        &_Dragon {background-color: gold;}
-        &_Ghost {background-color: purple;}                          
-    }
-    &__type-name {        
-        line-height: 35px;
-        text-align: center;
-        font-size: 1.3rem;
-    }    
-}
-.rarity {
-    width: 25px;
-    height: 210px; 
-    float: left;
-    &__item {
-        width: 100%;
-        height: 42px;
-        background-color: rgba(117, 117, 117, 0.5);
-        border-bottom: 1px solid black;  
-        opacity: 0.8;   
-        overflow: hidden;  
-        line-height: 42px;
-        text-align: center;            
-        cursor: pointer; 
-        font-size: 0;
-        transition: width .2s ease-in-out;       
-        &:hover  {
-            opacity: 1;
-            width: 120px;
-            font-size: 1.2rem;
-            transition: width .2s ease-in-out;
-        }  
-        &:last-child {               
-            border: none;       
-        }
-        &_usual {background-color: white;}
-        &_rare {background-color: lightblue;}
-        &_veryRare {background-color: dodgerblue;}
-        &_epic {background-color: mediumpurple;}
-        &_legendary {background-color: orangered;}
-    }
 }
 .description {
     float: left;    
@@ -190,7 +11,7 @@ $color-name: brown;
     &__name {
         width: 100%;
         height: 30px;
-        background-color: $color-name;        
+        background-color: brown;        
         text-align: center;
         line-height: 30px;
         font-size: 1.3rem; 
@@ -205,7 +26,4 @@ $color-name: brown;
         font-size: 1.3rem;      
         resize: none;        
     }
-}
-.parameters {
-    float: left;
 }
