--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,5 +1,5 @@
 .footer {    
     width: 100%;
     height: 150px;
-    background-color: darkslategray;    
+    background-color: whitesmoke;    
 }
