--- a/src/app/rarity-pokemon/rarity-pokemon.component.html
+++ b/src/app/rarity-pokemon/rarity-pokemon.component.html
@@ -1,7 +1,7 @@
 <div class="rarity">
-    <div class="rarity__item rarity__item_usual" (click)="setRarity('usual')">Обычный</div>
-    <div class="rarity__item rarity__item_rare" (click)="setRarity('rare')">Необычный</div>
-    <div class="rarity__item rarity__item_veryRare" (click)="setRarity('veryRare')">Редкий</div>
-    <div class="rarity__item rarity__item_epic" (click)="setRarity('epic')">Эпический</div>
-    <div class="rarity__item rarity__item_legendary" (click)="setRarity('legendary')">Легендарный</div>
+    <div class="rarity__item rarity__item_usual" (click)="setRarity('Usual')">Обычный</div>
+    <div class="rarity__item rarity__item_rare" (click)="setRarity('Rare')">Необычный</div>
+    <div class="rarity__item rarity__item_veryRare" (click)="setRarity('VeryRare')">Редкий</div>
+    <div class="rarity__item rarity__item_epic" (click)="setRarity('Epic')">Эпический</div>
+    <div class="rarity__item rarity__item_legendary" (click)="setRarity('Legendary')">Легендарный</div>
 </div>
