добавил новые компоненты

--- a/src/app/area-input/area-input.component.scss
+++ b/src/app/area-input/area-input.component.scss
@@ -14,7 +14,7 @@
         border: 1px solid black;    
         border-radius: 25px; 
         z-index: -2; 
-        &_rare {box-shadow: 0px 15px 65px 0px lightblue;}
+        &_rare {box-shadow: 0px 15px 65px 0px lightskyblue;}
         &_veryRare {box-shadow: 0px 15px 65px 0px dodgerblue;}
         &_epic {box-shadow: 0px 15px 65px 0px mediumpurple;}
         &_legendary {box-shadow: 0px 15px 65px 0px orangered;}
