--- a/src/app/pokemon/pokemon.component.html
+++ b/src/app/pokemon/pokemon.component.html
@@ -1,12 +1,21 @@
 <div class="pokemon">
-    <div class="pokemon__area">            
+    <div class="pokemon__area" [ngClass]="{pokemon__area_rare:RarityBool[1],pokemon__area_veryRare:RarityBool[2],
+        pokemon__area_epic:RarityBool[3],pokemon__area_legendary:RarityBool[4]}">            
     </div>
     <div class="pokemon__div-img">
         <img src={{pokemon.image}} alt={{pokemon.name}} class="pokemon__img">
     </div>  
     <div class="pokemon__info">        
-        <div class="pokemon__fire"></div>
-        <div class="pokemon__fire"></div>                
+        <div class="pokemon__types" [ngClass]="{pokemon__types_Electric:BoolClass[1],
+            pokemon__types_Fire:BoolClass[2],pokemon__types_Water:BoolClass[3],pokemon__types_Psychic:BoolClass[4],pokemon__types_Ground:BoolClass[5],
+            pokemon__types_Normal:BoolClass[6],pokemon__types_Flying:BoolClass[7],pokemon__types_Bug:BoolClass[8],pokemon__types_Fighting:BoolClass[9],
+            pokemon__types_Grass:BoolClass[10],pokemon__types_Fairy:BoolClass[11],pokemon__types_Ice:BoolClass[12],pokemon__types_Poison:BoolClass[13],
+            pokemon__types_Rock:BoolClass[14],pokemon__types_Steel:BoolClass[15],pokemon__types_Dragon:BoolClass[16],pokemon__types_Ghost:BoolClass[17]}"></div>
+        <div class="pokemon__types" [ngClass]="{pokemon__types_Electric:BoolClass2[1],
+            pokemon__types_Fire:BoolClass2[2],pokemon__types_Water:BoolClass2[3],pokemon__types_Psychic:BoolClass2[4],pokemon__types_Ground:BoolClass2[5],
+            pokemon__types_Normal:BoolClass2[6],pokemon__types_Flying:BoolClass2[7],pokemon__types_Bug:BoolClass2[8],pokemon__types_Fighting:BoolClass2[9],
+            pokemon__types_Grass:BoolClass2[10],pokemon__types_Fairy:BoolClass2[11],pokemon__types_Ice:BoolClass2[12],pokemon__types_Poison:BoolClass2[13],
+            pokemon__types_Rock:BoolClass2[14],pokemon__types_Steel:BoolClass2[15],pokemon__types_Dragon:BoolClass2[16],pokemon__types_Ghost:BoolClass2[17]}"></div>                
         <div class="pokemon__name">{{pokemon.name}}</div>
     </div>  
 </div>
