--- a/src/app/pokemon/pokemon.component.scss
+++ b/src/app/pokemon/pokemon.component.scss
@@ -15,6 +15,10 @@
         background-color: #2E2E2E;  
         border: 1px solid black;    
         border-radius: 25px;  
+        &_rare {box-shadow: 0px 15px 65px 0px lightskyblue;}
+        &_veryRare {box-shadow: 0px 15px 65px 0px dodgerblue;}
+        &_epic {box-shadow: 0px 15px 65px 0px mediumpurple;}
+        &_legendary {box-shadow: 0px 15px 65px 0px orangered;}
     }
     &__div-img {
         height: 200px;
@@ -38,14 +42,32 @@
         border-radius: 50px;
         border: 1px solid black;
     }    
-    &__fire {
+    &__types {
         float: left;
         width: 25px;
         height: 25px;
         border-radius: 25px;
-        background-color: red;
-        margin: 4px 1px 4px 5px;
-        //border: 1px solid black;
+        background-color: white;
+        margin: 4px 1px 4px 5px;   
+        display: none;
+        &_Electric {background-color: yellow; display: block;}  
+        &_Fire {background-color: red; display: block;}  
+        &_Water {background-color: blue; display: block;}
+        &_None {background-color: white; display: block;}
+        &_Psychic {background-color: hotpink; display: block;}
+        &_Ground {background-color: lightseagreen; display: block;}
+        &_Normal {background-color: navajowhite;display: block;}
+        &_Flying {background-color: royalblue;display: block;}
+        &_Bug {background-color: sienna;display: block;}
+        &_Fighting {background-color: orangered;display: block;}
+        &_Grass {background-color: lightgreen;display: block;}
+        &_Fairy {background-color: violet;display: block;}
+        &_Ice {background-color: lightblue;display: block;}
+        &_Poison {background-color: mediumvioletred;display: block;}
+        &_Rock {background-color: grey;display: block;}
+        &_Steel {background-color: lightslategrey;display: block;}
+        &_Dragon {background-color: gold;display: block;}
+        &_Ghost {background-color: purple;display: block;}      
     }
     &__name {
         float: right;
