--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,5 @@
 <nav class="menu">
-    <a routerLink="/new">Новый покемон</a>
+    <a class="menu__a" routerLink="/new">Новый покемон</a>
+    <a class="menu__a" routerLink="">Список покемонов</a>
 </nav>
 
