--- a/src/app/detail-pokemon/detail-pokemon.component.scss
+++ b/src/app/detail-pokemon/detail-pokemon.component.scss
@@ -280,6 +280,19 @@
     .card {
         width: 100%;
         display: block; 
-        float: left;  
+        float: left;
+        &__btn-delete, &__btn-edit, &__btn-back {
+            width: 100%;            
+        }  
     }    
+}
+@media (max-width: 734px) {
+    .card {
+        margin-top: 100px;
+    }
+}
+@media (max-width: 552px) {
+    .card {
+        margin-top: 150px;
+    }   
 }
