--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -2,4 +2,22 @@
     width: 100%;
     height: 150px;
     background-color: whitesmoke;    
+    text-align: center;
+    font-size: 3.5rem;
+    line-height: 150px;
+}
+@media (max-width: 580px) {
+    .footer {
+        font-size: 2.5rem;
+    }
+}
+@media (max-width: 430px) {
+    .footer {
+        font-size: 2rem;
+    }
+}
+@media (max-width: 320px) {
+    .footer {
+        font-size: 1.5rem;
+    }
 }
