--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -22,3 +22,23 @@
         }    
     }
 }
+@media (max-width: 734px) {
+    .menu {        
+        width: 100%;
+        margin: 0;
+        margin-top: 5px;
+        &__a {
+            width: 50%;            
+        }
+    } 
+}
+@media (max-width: 552px) {
+    .menu {
+        width: 100%;
+        margin: 0;
+        margin-top: 5px;
+        &__a {
+            width: 100%;            
+        }
+    }    
+}
