--- a/src/app/new-pokemon/new-pokemon.component.scss
+++ b/src/app/new-pokemon/new-pokemon.component.scss
@@ -229,6 +229,16 @@
         margin: 2% 0 2% 0;
     }
 }
+@media (max-width: 734px) {
+    .container {
+        margin-top: 70px;
+    }
+}
+@media (max-width: 552px) {
+    .container {
+        margin-top: 100px;
+    }   
+}
 @media (max-width: 540px) {
     .areaInput {         
         margin-top: 2%;     
