--- a/src/app/pokemons/pokemons.component.scss
+++ b/src/app/pokemons/pokemons.component.scss
@@ -33,11 +33,21 @@
         }
     }
 }
+@media (max-width: 734px) {
+    .container {
+        margin-top: 50px;
+    }
+}
 @media (max-width: 650px) {
     .container {
         grid-template-columns: 1fr; 
         &__item {
             padding: 2%;
         }
+    }
+}
+@media (max-width: 552px) {
+    .container {
+        margin-top: 100px;
     }
 }
